<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spen Pointer Toolbox</string>
    <string name="look_like">THIS HOW IT LOOKS LIKE</string>
    <string name="color_picker">Material Color Picker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="github">GITHUB</string>
    <string name="website">WEBSITE</string>
    <string name="about">ABOUT</string>
    <string name="dribbble">DRIBBBLE</string>
    <string name="developedby">Developed by <b>Anjith Sasindran</b></string>
    <string name="designby">Design inspired from <b>Lucas Bonomi</b></string>
    <string name="main_developer"> Developed by <b>Edy Daoud</b></string>
    <string name="main_website">Xda Developers</string>
    <string name="color_picker_developer"> Color picker developer <b>Anjith Sasindran</b>\n view color picker about for more info</string>
    <string name="main_text"><b>CHANGE SPEN POINTER TO ANY COLOR, SHOULD WORK ON ANY GALAXY NOTE SERIES, IF YOU FACE ANY PROBLEM VISIT XDA MODULE PAGE AND REPORT YOUR PROBLEM, FOR MORE INFO CHECK ABOUT. \n\n PLEASE REBOOT TO SET POINTER COLOR.</b></string>
    <string name="support">SUPPORT</string>
    <string name="main_github">GITHUB</string>
    <string name="apply">APPLY</string>
    <string name="cancel">CANCEL</string>
    <string name="change_color">CHANGE COLOR</string>
    <string name="change_pointer">CHANGE POINTER</string>
    <string name="currentPointer">Current Pointer</string>
    <string name="xposed_color_checkbox_enable">ENABLE XPOSED SPEN POINTER COLOR</string>
    <string name="xposed_color_checkbox_disable">DISABLE XPOSED SPEN POINTER COLOR</string>
    <string name="xposed_pointer_checkbox_enable">ENABLE XPOSED SPEN CUSTOM POINTER</string>
    <string name="xposed_pointer_checkbox_disable">DISABLE XPOSED SPEN CUSTOM POINTER</string>
    <string name="xposed_settings">XPOSED SETTINGS</string>

</resources>
