<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:id="@+id/developer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/developedby"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/website"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/website"
            android:textColor="@color/dialogcolor" />

        <Button
            android:id="@+id/github"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/github"
            android:textColor="@color/dialogcolor" />

        <Button
            android:id="@+id/instagram"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/instagram"
            android:textColor="@color/dialogcolor" />

    </LinearLayout>

    <TextView
        android:id="@+id/designer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/designby"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/dribbble"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dribbble"
            android:textColor="@color/dialogcolor" />

    </LinearLayout>

</LinearLayout>
