<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/changeColor"
        style="?android:borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_marginTop="20sp"
        android:background="@android:color/transparent"
        android:text="@string/change_color"
        android:textColor="#777777" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/aboutspcc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/changeColor"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:text="@string/main_text"
        android:textColor="#777777"
        android:textSize="14sp" />

    <Button
        android:id="@+id/aboutspcc"
        style="?android:borderlessButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:onClick="about_spcc"
        android:text="@string/about"
        android:textColor="#777777" />

</RelativeLayout>

